University Projects/Java/GreenCubeSystem/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_31\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem
-d
C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\File\StorageData.java
<---- end of javadoc command ---->
Loading source file C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\File\StorageData.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_31
Building tree for all the packages and classes...
Generating C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\doc\File\StorageData.html...
Generating C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\doc\File\package-frame.html...
Generating C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\doc\File\package-summary.html...
Generating C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\doc\constant-values.html...
C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\File\DataBase.java:10: error: illegal start of type
    public DataBase(String ItemName, )
                                     ^
C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\File\DataBase.java:10: error: ')' expected
    public DataBase(String ItemName, )
                                      ^
C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\File\DataBase.java:11: error: ';' expected
    {
     ^
Generating C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\doc\serialized-form.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\doc\allclasses-frame.html...
Generating C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\doc\allclasses-noframe.html...
Generating C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\doc\index.html...
Generating C:\Users\Jaco\Documents\_Itrw212(Project)\PROJECT\GreenCubeSystem\doc\stylesheet.css...
3 errors
